--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "express": "^4.21.2",
     "node": "^20.18.1",
     "nodemon": "^3.1.7"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
